2004-08-05  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* calendar/e-cal-backend-exchange.c (discard_alarm): Implemented
	Fixes #45103

2004-08-04  Dan Winship  <danw@novell.com>

	* README: remove "this is SOOOO beta" message since we've been
	shipping snaps for quite a while now

2004-08-04  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (book_resource): 
	Implemented the code to book the calendar of a resource object.
	(send_objects): Added code to send mails to all attendees.

2004-08-03  Sushma Rai <rsushma@novell.com>

	* storage/exchange-hierarchy-foreign.c (remove_folder): Emitting the 
	"removed_folder" signal after ESource cleanup. Fixes a crash while
	unsubscribing other user's folder.

2004-08-03  Nicel KM  <mnicel@novell.com>

	* configure.in: 1.5.92

	* NEWS: update

2004-08-02  Adam Weinberger  <adamw@FreeBSD.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-08-02  Sushma Rai <rsushma@novell.com>

	* storage/exchange-hierarchy-somedav.[ch] 
	(exchange_hierarchy_somedav_add_folder): Removed the third
	parameter folder_out, which was always set to NULL and 
	hence this function was throwing the error "generic error".
	* storage/exchange-hierarchy-favorites.c 
	(exchange_hierarchy_favorites_add_folder): Likewise
	Fixes #62257

2004-07-30  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* storage/exchange-hierarchy-foreign.c 
	(exchange_hierarchy_foreign_add_folder): Remove unused variables.

2004-07-30  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-hierarchy-foreign.c (add_href): Allocate memory
	for uri before storing it in the hrefs array. Fixes #61950
	(exchange_hierarchy_foreign_add_folder): Now uses a cleaner way to
	get the foreign user's name.
	(hierarchy_foreign_new): Removed unwanted checks for input args.
	(exchange_hierarchy_foreign_new): Add checks for input args.
	(exchange_hierarchy_foreign_new_from_dir): Similar
	* storage/exchange-hierarchy-gal.c (exchange_hierarchy_gal_new):